src/test/deca/context/valid/created/objet/meth_call2.deca
// Description :
// test de verification appel fonction
//
// Resultats :
// ok

class A {
    int x ;
    int get() {
        int a;
        return a ;
    }
}

{
    A a = new A() ;
    println(a.get()) ;
}