src/test/deca/context/invalid/created/objet/meth_call2.deca
// description :
//      appel de la methode incorrecte : trop de parametre
// Resultat
//      Ligne 17 : signature de methode incorrecte
class A {
    int x ;
    int getX() {
        return x ;
    }
    void setX(int x) {
        this.x = x ;
    }
}

{
    A a = new A() ;
    a.setX(2, 5) ;
    println("a.getX() = ", a.getX()) ;
}